style(packs, styles): change styles

--- a/src/features/packs/PacksTable/PacksTableBody/PacksActionCell/PacksActionCell.module.scss
+++ b/src/features/packs/PacksTable/PacksTableBody/PacksActionCell/PacksActionCell.module.scss
@@ -2,8 +2,10 @@
   cursor: default;
 
   display: inline-block;
+  //   display: flex !important;
+  //   justify-content: center !important;
 
-  width: 96px;
+  //   width: 100% !important;
 
-  text-align: left;
+  //   text-align: left;
 }
