--- a/src/common/styles/mixins/mixinCommon.scss
+++ b/src/common/styles/mixins/mixinCommon.scss
@@ -13,38 +13,76 @@
   .row {
     cursor: pointer;
 
-    td {
+    &:nth-child(5) {
+      // width: 50px !important;
+    }
+  }
+
+  td {
+    //  width: 100px !important;
+
+    &:nth-child(2) {
       width: 100px;
 
-      &:last-child {
-        text-align: right;
+      div > p {
+        width: 65%;
+
+        text-align: center;
       }
+    }
 
-      .image {
-        width: 50px;
-        height: 50px;
-        margin-left: 5px;
+    &:nth-child(3) {
+      width: 174px;
+
+      div > p {
+        width: 80%;
+
+        text-align: center;
       }
+    }
 
-      .tableCellText {
-        overflow: hidden;
-        display: -webkit-box;
+    &:nth-child(4) {
+      width: 320px;
+      // padding-right: 5px;
 
-        width: 100%;
-        max-width: 200px;
-        max-height: 100px;
+      // text-align: center;
+    }
 
-        font-size: 13px;
-        text-overflow: ellipsis;
-        word-break: break-word;
+    &:nth-child(5) {
+      width: 117px;
+      padding-right: 5px;
 
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2;
+      // text-align: center;
+    }
 
-        &::first-letter {
-          text-transform: none;
-        }
-      }
+    &:last-child {
+      // text-align: right !important;
+    }
+  }
+
+  .image {
+    width: 50px;
+    height: 50px;
+    margin-left: 5px;
+  }
+
+  .tableCellText {
+    overflow: hidden;
+    display: -webkit-box;
+
+    //  width: 100%;
+    //  max-width: 200px;
+    max-height: 100px;
+
+    font-size: 13px;
+    text-overflow: ellipsis;
+    word-break: break-word;
+
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+    &::first-letter {
+      text-transform: none;
     }
   }
 }
