--- a/src/common/components/BackToPacks/BackToPacks.module.scss
+++ b/src/common/components/BackToPacks/BackToPacks.module.scss
@@ -1,22 +1,35 @@
-.backToPacks {
-  &__linkPacks {
-    display: flex;
-    align-items: center;
-    align-self: flex-start;
+.backToPacks__linkPacks {
+  position: relative;
 
-    margin: 0px 0px 22px 0px;
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
 
-    font-weight: 500;
-    color: inherit;
+  height: 26px;
+  padding: 0px 10px 0px 30px;
 
-    transition: all 0.2s ease;
+  color: white;
 
-    &:hover {
-      color: #1b79ce;
-    }
+  background: #1b79ce;
+  border-radius: 30px;
+
+  transition: all ease 0.2s;
+
+  &::before {
+    content: '';
+
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translate(0, -50%);
+
+    width: 20px;
+    height: 20px;
+
+    background: url('../../../assets/img/icons/backForward.svg') 50% no-repeat;
   }
 
-  &__arrow {
-    margin: 0px 10px 0px 0px;
+  &:hover {
+    background: #1668bd;
   }
 }
