--- a/src/common/components/BackToPacks/BackToPacks.module.scss
+++ b/src/common/components/BackToPacks/BackToPacks.module.scss
@@ -8,10 +8,12 @@
   height: 26px;
   padding: 0px 10px 0px 30px;
 
+  font-weight: 500;
   color: white;
 
   background: #1b79ce;
   border-radius: 30px;
+  box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
 
   transition: all ease 0.2s;
 
@@ -26,7 +28,7 @@
     width: 20px;
     height: 20px;
 
-    background: url('../../../assets/img/icons/backForward.svg') 50% no-repeat;
+    background: url('../../../assets/img/icons/backForwardWhite.svg') 50% no-repeat;
   }
 
   &:hover {
