refactor(components): refactor code, change some logic, fix namings, change styles

--- a/src/common/components/EditableSpan/EditableSpan.module.scss
+++ b/src/common/components/EditableSpan/EditableSpan.module.scss
@@ -20,7 +20,12 @@
 }
 
 .userName {
-  text-transform: capitalize;
+  overflow: hidden;
+
+  max-width: 260px;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .marker {
