--- a/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
+++ b/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
@@ -1,187 +1,123 @@
+@import '../../../common/styles/mixins/mixinAdaptive';
+
 .pageTitleBlockContainer {
   display: flex;
   flex-direction: column;
+  row-gap: 15px;
 }
 
 .pageTitleBlock {
-  &__titleBlock {
+  &__content {
     display: flex;
     column-gap: 15px;
     align-items: center;
-    justify-content: space-between;
+  }
+
+  &__titleBlock {
+    display: flex;
+    align-items: center;
   }
 
   &__title {
-    display: table-cell;
+    @include adaptiveValue('font-size', 25, 20, 599, 319, 1);
 
-    max-width: 50%;
-
-    font-size: 22px;
     font-weight: 600;
     word-break: break-word;
-  }
-
-  &__menuContainer {
-    flex-grow: 1;
-
-    height: 24px;
-
-    background: url('../../../assets/img/icons/menuIcon.svg') no-repeat;
-  }
-
-  &__menuSheet {
-    position: relative;
-
-    &::before {
-      content: '';
-
-      position: absolute;
-      z-index: 2;
-      top: -3px;
-      left: 30px;
-
-      width: 95px;
-      height: 30px;
-
-      background: white;
-      border-radius: 5px;
-
-      animation: animateWidth 0.3s ease forwards;
-    }
-
-    &::after {
-      content: '';
-
-      position: absolute;
-      z-index: 1;
-      top: 7px;
-      left: 26px;
-      transform: rotate(45deg);
-
-      width: 10px;
-      height: 10px;
-
-      background: white;
-      border-radius: 3px;
-    }
-  }
-
-  &__menu {
-    cursor: pointer;
-
-    position: relative;
-
-    width: 24px;
-    height: inherit;
-  }
-
-  &__menuItemStyle {
-    opacity: 0;
-
-    animation: animateMenuOpen 0.4s ease forwards;
-
-    &:nth-child(1) {
-      left: 35px;
-
-      background: url('../../../assets/img/icons/studyPack.svg') 50% / auto auto no-repeat;
-
-      animation-delay: 0.3s;
-    }
-
-    &:nth-child(2) {
-      left: 65px;
-
-      background: url('../../../assets/img/icons/editPack.svg') 50% / auto auto no-repeat;
-
-      animation-delay: 0.2s;
-    }
-
-    &:nth-child(3) {
-      left: 95px;
-
-      background: url('../../../assets/img/icons/deletePack.svg') 50% / auto auto no-repeat;
-
-      animation-delay: 0.1s;
+    @media (max-width: 599px) {
+      text-align: center;
     }
   }
 }
 
-.disabled:nth-child(1) {
-  cursor: auto;
-
-  background: url('../../../assets/img/icons/studyPackDisabled.svg') 50% / auto auto no-repeat;
-}
-
-.menuItem {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 35px;
-
-  width: 24px;
-  height: 24px;
-
-  border-radius: 30px;
-}
-@keyframes animateWidth {
-  0% {
-    max-width: 0vw;
-  }
-
-  100% {
-    max-width: 100px;
-  }
-}
-@keyframes animateMenuOpen {
-  0% {
-    z-index: 2;
-    transform: translate(-15px, 0px);
-
-    opacity: 0;
-  }
-
-  100% {
-    z-index: 2;
-    transform: translate(0, 0);
-
-    opacity: 1;
-  }
-}
-
-.portal,
-.portalBgColor {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-
-  width: 100vw;
-  height: 100vh;
-}
-
-.portalBgColor {
-  z-index: 2;
-
-  background: rgb(0 0 0 / 53%);
-}
-
-.modalsContainer {
-  position: absolute;
-  z-index: 3;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.filterButtonContainer {
+  position: relative;
 
   display: flex;
-  flex-direction: column;
-  align-self: center;
+  flex: 1 1 auto;
+  justify-content: flex-end;
+}
 
-  width: 100%;
-  max-width: 400px;
-  padding: 30px;
+.filterButton {
+  padding-right: 20px !important;
 
-  text-align: center;
+  color: black;
 
   background: white;
-  border-radius: 20px;
+
+  &::before {
+    content: '';
+
+    position: absolute;
+    top: 9px;
+    left: 10px;
+
+    width: 20px;
+    height: 20px;
+
+    background: url('../../../assets/img/icons/filterIcon.svg') no-repeat;
+  }
+
+  &:hover {
+    background: rgb(236 236 236);
+  }
+
+  p {
+    width: 90px;
+
+    text-align: end;
+  }
+  @media (max-width: 599px) {
+    min-width: unset !important;
+    padding: 19px 20px !important;
+
+    p {
+      display: none;
+    }
+  }
+}
+
+.learnButton,
+.addButton {
+  min-width: 175px !important;
+  padding-right: 10px !important;
+
+  &::before {
+    content: '';
+
+    position: absolute;
+    top: 8px;
+    left: 9px;
+  }
+
+  p {
+    white-space: nowrap;
+  }
+  @media (max-width: 599px) {
+    min-width: unset !important;
+    padding: 19px 20px !important;
+
+    p {
+      display: none;
+    }
+  }
+}
+
+.learnButton {
+  &::before {
+    width: 21px;
+    height: 21px;
+
+    background: url('../../../assets/img/icons/studyPackWhite.svg') no-repeat;
+  }
+}
+
+.addButton {
+  min-width: unset;
+
+  &::before {
+    width: 22px;
+    height: 22px;
+
+    background: url('../../../assets/img/icons/addIconWhite.svg') no-repeat;
+  }
 }
