--- a/src/features/cards/CardsTable/CardsTableBody/CardsTableBody.module.scss
+++ b/src/features/cards/CardsTable/CardsTableBody/CardsTableBody.module.scss
@@ -1,2 +1,218 @@
-@import "../../../../common/styles/mixins/mixinCommon";
-@include table_body_styles;
+.cardImageWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+
+  height: 100%;
+  padding: 0 10px;
+
+  transition: 0.2s ease transform 0.2s;
+  @media (max-width: 599px) {
+    z-index: 1;
+
+    width: 100%;
+    padding: unset;
+  }
+}
+
+.cardName {
+  transform: rotateX(-90deg);
+
+  transition: 0.2s ease transform 0s;
+}
+
+.cardNameAdaptive {
+  z-index: 2;
+}
+
+.cardImage {
+  width: 80px;
+  height: 64px;
+
+  object-fit: cover;
+  border: 1px solid rgb(128 128 128 / 67.2%);
+  @media (max-width: 599px) {
+    width: 100%;
+    height: 100%;
+
+    opacity: 0.25;
+    border: none;
+  }
+}
+
+.tableCards__body {
+  @media (max-width: 599px) {
+    display: block;
+
+    width: 100%;
+
+    font-weight: 600;
+  }
+}
+
+.tableCards__bodyRow {
+  height: 70px;
+
+  background: white;
+
+  &:not(:last-child) {
+    border-bottom: 2px solid #efefef;
+  }
+
+  &:hover {
+    background: #f5f5f5;
+  }
+  @media (max-width: 599px) {
+    position: relative;
+
+    overflow: hidden;
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    border: 1px solid rgb(189 188 188);
+    border-radius: 15px;
+
+    &:not(:last-child) {
+      margin: 0px 0px 15px 0px;
+
+      border-bottom: 1px solid rgb(189 188 188);
+    }
+  }
+}
+
+.tableCards__bodyCellContent {
+  @media (max-width: 599px) {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+  }
+}
+
+.tableCards__bodyCell {
+  position: relative;
+
+  line-height: 18px;
+
+  &:not(:last-child) {
+    cursor: pointer;
+
+    padding: 5px 10px;
+  }
+
+  &:nth-child(1) {
+    @media (max-width: 599px) {
+      height: 45px;
+
+      background: rgb(221 221 221 / 54.9%);
+
+      .cardNameAdaptive {
+        display: none;
+      }
+
+      .tableCards__bodyCellTitle {
+        overflow: hidden;
+
+        width: 80%;
+
+        text-align: center;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .tableCards__bodyCellContent {
+        justify-content: center;
+      }
+    }
+  }
+
+  &:nth-child(1),
+  &:nth-child(2) {
+    div p {
+      overflow: hidden;
+
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+
+  &:nth-child(2) {
+    .tableCards__bodyCellContent {
+      display: flex;
+    }
+
+    div {
+      p {
+        filter: blur(5px);
+
+        &:hover {
+          filter: unset;
+        }
+      }
+    }
+  }
+
+  &:nth-child(3),
+  &:nth-child(4) {
+    text-align: center;
+    @media (max-width: 599px) {
+      text-align: unset;
+    }
+  }
+
+  &:nth-child(5) {
+    padding: 5px 10px 5px 0px;
+    @media (max-width: 599px) {
+      position: absolute;
+      z-index: 2;
+      top: 2px;
+      right: 0;
+    }
+  }
+  @media (max-width: 599px) {
+    position: unset;
+
+    display: block;
+
+    line-height: 35px;
+  }
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+}
+
+.tableCards__bodyCellTitle {
+  display: none;
+  @media (max-width: 599px) {
+    z-index: 2;
+
+    display: unset;
+
+    white-space: nowrap;
+  }
+}
+
+.linkToLearnActive,
+.linkToLearnDisabled {
+  display: inline-block;
+
+  width: 20px;
+  height: 20px;
+}
+
+.linkToLearnActive {
+  background: url('../../../../assets/img/icons/studyPack.svg') 50% 50% no-repeat;
+}
+
+.linkToLearnDisabled {
+  pointer-events: none;
+  cursor: auto;
+
+  background: url('../../../../assets/img/icons/studyPackDisabled.svg') 50% 50% no-repeat;
+}
