--- a/src/features/packs/PackSlider/PackSlider.module.scss
+++ b/src/features/packs/PackSlider/PackSlider.module.scss
@@ -1,3 +1,5 @@
+@import '../../../common/styles/mixins/mixinCommon';
+
 .sliderContainer {
   display: flex;
   flex-direction: column;
@@ -5,47 +7,23 @@
 }
 
 .slider {
-  width: 155px !important;
-
-  & > *:nth-child(1) {
-    right: -9px;
-
-    width: 110%;
-  }
-
-  & > *:nth-child(3) {
-    margin-top: -6px;
-    margin-left: -7px;
-  }
-
-  & > *:nth-child(4) {
-    margin-top: -6px;
-    margin-left: -7px;
-  }
+  top: -2px;
 
   &__title {
     font-weight: 600;
+    text-align: start;
   }
 
   &__block {
+    @include user_select_none;
+
     display: flex;
     gap: 12px;
     align-items: center;
   }
 
   &__number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    min-width: 36px;
-    height: 36px;
-
     font-size: 16px;
     font-weight: 500;
-
-    background: white;
-    border: 1px solid #c4c4c4;
-    border-radius: 5px;
   }
 }
