--- a/src/features/packs/PacksTable/PacksTable.module.scss
+++ b/src/features/packs/PacksTable/PacksTable.module.scss
@@ -1,10 +1,10 @@
-.emptyTable {
+@import '../../../common/styles/mixins/mixinAdaptive';
+
+.emptyTableTitle {
   margin: 50px 0px 0px 0px;
 
   text-align: center;
 }
-
-//some common styles for modal
 
 .ChildrenContainer {
   position: absolute;
@@ -23,4 +23,18 @@
   justify-content: flex-end;
 
   margin: 5px 5px 20px 0px;
+}
+
+.tablePacks {
+  overflow: hidden;
+  table-layout: fixed;
+  border-collapse: collapse;
+
+  width: 100%;
+
+  background: white;
+  border-radius: 5px;
+  @media (max-width: 599px) {
+    background: unset;
+  }
 }
