--- a/src/features/packs/PackOwnerSwitcher/PackOwnerSwitcher.module.scss
+++ b/src/features/packs/PackOwnerSwitcher/PackOwnerSwitcher.module.scss
@@ -7,6 +7,7 @@
 .switcher {
   &__title {
     font-weight: 600;
+    text-align: start;
   }
 
   &__block {
@@ -15,8 +16,8 @@
   }
 
   &__blockItem {
-    width: 100px;
-    padding: 5px 30px !important;
+    width: 30px;
+    padding: 0px 20px !important;
 
     font-size: 14px !important;
     color: inherit !important;
