--- a/src/features/learn/Learn.module.scss
+++ b/src/features/learn/Learn.module.scss
@@ -1,23 +1,121 @@
-.MainContainer {
-  position: relative;
+@import '../../common/styles/mixins/mixinAdaptive';
+
+.learnContainer {
+  @include adaptiveValue('padding-top', 10, 10, 599, 320, 1);
+  @include adaptiveValue('padding-bottom', 26, 10, 599, 320, 1);
 
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  align-self: flex-start;
+  gap: 10px;
 
   width: 100%;
-  height: 100%;
-  padding: 60px 0px 0px 0px;
 }
 
-.learnContainer {
-  padding: 30px 40px;
-  background: rgb(240 240 240);
+.learnContent {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  align-self: center;
+
+  width: 100%;
+  max-width: 350px;
+  padding: 20px 20px;
+
+  background: white;
   border-radius: 20px;
 }
 
-.ButtonContainer{
+.questionContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.answerContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.learnTitle {
+  @include adaptiveValue('font-size', 22, 20, 599, 320, 1);
+
+  display: inline-block;
+
+  width: 100%;
+
+  font-weight: 600;
+  text-align: center;
+  word-wrap: break-word;
+}
+
+.imgContainer {
+  position: relative;
+
+  overflow: hidden;
+
+  width: 100%;
+  height: 190px;
+
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  object-fit: cover;
+}
+
+.button {
+  align-self: center;
+}
+
+.radioButtonsBlock {
+  display: flex !important;
+  flex-direction: column;
+  row-gap: 10px;
+
+  div {
+    display: flex !important;
+    flex-direction: unset;
+    row-gap: 10px;
+    column-gap: 10px;
+
+    label {
+      margin-right: 0;
+      margin-left: 0;
+
+      &:not(:last-child) {
+        width: 150px;
+      }
+
+      span {
+        padding-top: 0;
+        padding-bottom: 0;
+        padding-left: 0;
+      }
+    }
+  }
+}
+
+.boldText,
+.rateText {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.rateText {
+  text-align: center;
+}
+
+.text {
+  font-size: 16px;
+  line-height: 19px;
 }
