--- a/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
+++ b/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
@@ -40,9 +40,9 @@
 .filterButton {
   padding-right: 20px !important;
 
-  color: black;
+  color: black !important;
 
-  background: white;
+  background: white !important;
 
   &::before {
     content: '';
@@ -58,7 +58,7 @@
   }
 
   &:hover {
-    background: rgb(236 236 236);
+    background: rgb(236 236 236) !important;
   }
 
   p {
