--- a/src/common/styles/mixins/mixinCommon.scss
+++ b/src/common/styles/mixins/mixinCommon.scss
@@ -9,32 +9,5 @@
   font-size: 26px;
   font-weight: 600;
 }
-@mixin table_body_styles {
-  .row {
-    cursor: pointer;
-  }
-
-  .image {
-    width: 50px;
-    height: 50px;
-    margin-left: 5px;
-  }
-
-  .tableCellText {
-    overflow: hidden;
-    display: -webkit-box;
-
-    max-height: 100px;
-
-    font-size: 13px;
-    text-overflow: ellipsis;
-    word-break: break-word;
-
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-
-    &::first-letter {
-      text-transform: none;
-    }
-  }
-}
+// @mixin table_body_styles {
+// }
