--- a/src/common/styles/mixins/mixinCommon.scss
+++ b/src/common/styles/mixins/mixinCommon.scss
@@ -1,13 +1,12 @@
+@import './mixinAdaptive';
 @mixin user_select_none {
   -moz-user-select: none;
   -khtml-user-select: none;
   user-select: none;
 }
 @mixin auth_title_style {
-  margin: 0px 0px 15px 0px;
+  @include adaptiveValue('margin-bottom', 15, 5, 430, 300, 1);
 
   font-size: 26px;
   font-weight: 600;
 }
-// @mixin table_body_styles {
-// }
