--- a/src/features/auth/NewPassword/NewPassword.module.scss
+++ b/src/features/auth/NewPassword/NewPassword.module.scss
@@ -1,13 +1,15 @@
 @import '../../../common/styles/mixins/mixinCommon';
+@import '../../../common/styles/mixins/mixinAdaptive';
 
 .setPasswordContainer {
+  @include adaptiveValue('padding', 30, 20, 430, 300, 1);
+
   display: flex;
   flex-direction: column;
   align-self: center;
 
   width: 100%;
   max-width: 400px;
-  padding: 30px;
 
   text-align: center;
 
@@ -26,7 +28,7 @@
   }
 
   &__text {
-    margin: 0px 0px 25px 0px;
+    @include adaptiveValue('margin-bottom', 25, 15, 430, 300, 1);
 
     font-weight: 500;
     line-height: 25px;
