--- a/src/features/auth/Recovery/Recovery.module.scss
+++ b/src/features/auth/Recovery/Recovery.module.scss
@@ -1,13 +1,15 @@
 @import '../../../common/styles/mixins/mixinCommon';
+@import '../../../common/styles/mixins/mixinAdaptive';
 
 .forgotPassword {
+  @include adaptiveValue('padding', 30, 20, 430, 300, 1);
+
   display: flex;
   flex-direction: column;
   align-self: center;
 
   width: 100%;
   max-width: 400px;
-  padding: 30px;
 
   text-align: center;
 
@@ -16,6 +18,8 @@
 }
 
 .form {
+  @include adaptiveValue('margin-bottom', 25, 15, 430, 300, 1);
+
   display: flex;
   flex-direction: column;
 
@@ -23,7 +27,7 @@
 }
 
 .help {
-  margin: 0px 0px 25px 0px;
+  @include adaptiveValue('margin-bottom', 25, 15, 430, 300, 1);
 
   font-weight: 500;
   line-height: 25px;
@@ -36,9 +40,10 @@
 }
 
 .forgotQuestion {
-  margin: 0px 0px 10px 0px;
+  @include adaptiveValue('margin-bottom', 10, 5, 430, 300, 1);
 
   font-weight: 500;
+  line-height: 18px;
   color: grey;
 }
 
