--- a/src/features/auth/Registration/Registration.module.scss
+++ b/src/features/auth/Registration/Registration.module.scss
@@ -1,13 +1,15 @@
 @import '../../../common/styles/mixins/mixinCommon';
+@import '../../../common/styles/mixins/mixinAdaptive';
 
 .registration {
+  @include adaptiveValue('padding', 30, 20, 430, 300, 1);
+
   display: flex;
   flex-direction: column;
   align-self: center;
 
   width: 100%;
   max-width: 400px;
-  padding: 30px;
 
   text-align: center;
 
@@ -27,11 +29,12 @@
 }
 
 .button {
-  margin: 25px 0px;
+  @include adaptiveValue('margin-bottom', 25, 15, 430, 300, 1);
+  @include adaptiveValue('margin-top', 25, 10, 430, 300, 1);
 }
 
 .signInQuestion {
-  margin: 0px 0px 10px 0px;
+  @include adaptiveValue('margin-bottom', 10, 5, 430, 300, 1);
 
   font-weight: 500;
   color: grey;
