--- a/src/common/components/BackToPacks/BackToPacks.module.scss
+++ b/src/common/components/BackToPacks/BackToPacks.module.scss
@@ -13,7 +13,8 @@
 
   background: #1b79ce;
   border-radius: 30px;
-  box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
+  box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px,
+    rgb(0 0 0 / 12%) 0px 1px 5px 0px;
 
   transition: all ease 0.2s;
 
