--- a/src/features/auth/LogInApp/LogInApp.module.scss
+++ b/src/features/auth/LogInApp/LogInApp.module.scss
@@ -142,7 +142,8 @@
 
     background: white;
     border-radius: 30px;
-    box-shadow: 0px 4px 6px rgb(0 0 0 / 20%);
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px,
+      rgb(0 0 0 / 12%) 0px 1px 5px 0px;
 
     transition: 0.2s all ease;
 
