--- a/src/features/cards/CardActionsMenu/CardActionsMenu.module.scss
+++ b/src/features/cards/CardActionsMenu/CardActionsMenu.module.scss
@@ -29,7 +29,8 @@
 
     background: white;
     border-radius: 5px;
-    box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px,
+      rgb(0 0 0 / 12%) 0px 1px 5px 0px;
 
     animation: animateWidth 0.3s ease forwards;
   }
