--- a/src/common/components/Popups/Portal/Portal.scss
+++ b/src/common/components/Popups/Portal/Portal.scss
@@ -1,8 +1,7 @@
 .portal {
-  position: absolute;
+  position: fixed;
+  z-index: 10;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
 
   width: 100%;
