--- a/src/features/cards/CardsTable/CardsTableBody/CardsTableBody.module.scss
+++ b/src/features/cards/CardsTable/CardsTableBody/CardsTableBody.module.scss
@@ -11,6 +11,8 @@
 
   transition: 0.2s ease transform 0.2s;
   @media (max-width: 599px) {
+    pointer-events: none;
+
     z-index: 1;
 
     width: 100%;
@@ -35,6 +37,8 @@
   object-fit: cover;
   border: 1px solid rgb(128 128 128 / 67.2%);
   @media (max-width: 599px) {
+    pointer-events: none;
+
     width: 100%;
     height: 100%;
 
