--- a/src/features/auth/LogInApp/LogInApp.module.scss
+++ b/src/features/auth/LogInApp/LogInApp.module.scss
@@ -161,3 +161,12 @@
 .credentialsColor {
   color: blue;
 }
+
+.disabled {
+  pointer-events: none;
+
+  color: #b5b6b5;
+
+  background: #e0e0e0;
+  box-shadow: none;
+}
